restructure dir and updated product files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,30 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+
+# Environment
 .env
-venv
+.env.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific
+uploaded_urls.json
+scripts/
+images/
+*.log
+temp/
