--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
- 
-fastapi[all]
-motor
-pymongo[srv]
-python-multipart
-aiohttp
-httpx
-jina
-pydantic
-pydantic-settings
-python-dotenv
-uvicorn
-numpy
-streamlit
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+motor==3.3.2
+pymongo[srv]==4.6.0
+python-multipart==0.0.6
+httpx==0.25.1
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-dotenv==1.0.0
+numpy==1.26.2
+Pillow==10.1.0
+streamlit==1.29.0
+requests==2.31.0
