--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-motor==3.3.2
-pymongo[srv]==4.6.1
-python-multipart==0.0.6
-httpx==0.26.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-dotenv==1.0.1
-numpy==1.26.3
-Pillow==10.2.0
-streamlit==1.30.0
-requests==2.31.0
+fastapi>=0.109.0,<0.111.0
+uvicorn[standard]>=0.27.0,<0.29.0
+motor>=3.3.0,<4.0.0
+pymongo[srv]>=4.6.0,<5.0.0
+python-multipart>=0.0.6,<0.1.0
+httpx>=0.26.0,<0.28.0
+pydantic>=2.5.0,<3.0.0
+pydantic-settings>=2.1.0,<3.0.0
+python-dotenv>=1.0.0,<2.0.0
+numpy>=1.26.0,<2.0.0
+Pillow>=10.2.0,<11.0.0
